mongodb model done

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.11.0",
     "lucide-react": "^0.372.0",
+    "mongoose": "^8.3.2",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
     "react": "^18",
