--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.22.5"
   },
   "devDependencies": {
