--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
